# openzfs

./: CMakeLists.txt  CMakeSettings.json
cmd/os/windows/kstat/: resource.rc
cmd/os/windows/zfsinstaller/: CMakeLists.txt  resource.rc  zfsinstaller.cpp
cmd/raidz_test/: raidz_test.c
cmd/zdb/os/windows/: resource.rc
cmd/zfs/os/windows/: resource.rc
cmd/zpool/: zpool_vdev.c
cmd/zpool/os/linux/: zpool_vdev_os.c
cmd/zpool/os/windows/: resource.rc
cmd/zstream/os/windows/: resource.rc
include/os/windows/spl/sys/: condvar.h  spinlock.h  systm.h  taskq_impl.h  types.h  vmem.h
include/os/windows/zfs/sys/: kstat_windows.h  zfs_windows.h
include/sys/: zfs_ioctl.h
lib/libspl/os/windows/: posix.c
lib/libzfs/: libzfs_mount.c
lib/libzfs/os/windows/: libzfs_util_os.c
module/os/windows/: CMakeLists.txt  OpenZFS.inf  OpenZFS.man  driver.c  resource.rc
module/os/windows/spl/: CMakeLists.txt  spl-condvar.c  spl-kmem.c  spl-mutex.c  spl-spinlock.c  spl-taskq.c  spl-vmem.c  spl-windows.c
module/os/windows/zfs/: CMakeLists.txt  abd_os.c  arc_os.c  vdev_disk.c  vdev_file.c  zfs_ioctl_os.c  zfs_kstat_windows.c  zfs_vnops_windows.c  zfs_windows_zvol_scsi.c  zvol_os.c
module/zfs/: CMakeLists.txt  dbuf.c  dmu.c  dsl_crypt.c  dsl_pool.c  spa.c  space_map.c  vdev.c  vdev_label.c  vdev_removal.c  zap.c  zap_leaf.c  zap_micro.c  zfeature.c  zfs_ioctl.c  zio.c  zthr.c
scripts/: zfs-tests.sh
scripts/zts_windows/: Readme.txt  ZFS_Test_Config.ini  diskpartscript.txt  sendkeys.bat  zts_util_func.py  zts_windows_test.py
tests/runfiles/: windows-All.run  windows.run  windows1-test-raidz.run
tests/zfs-tests/include/: libtest.shlib  tunables.cfg
tests/zfs-tests/tests/functional/cache/: cache.cfg  cache_001_pos.ksh  cache_002_pos.ksh  cache_003_pos.ksh  cache_004_neg.ksh  cache_005_neg.ksh  cache_007_neg.ksh  cache_008_neg.ksh  cache_009_pos.ksh  cache_011_pos.ksh
tests/zfs-tests/tests/functional/cli_root/zdb/: zdb_003_pos.ksh  zdb_004_pos.ksh  zdb_005_pos.ksh  zdb_args_neg.ksh  zdb_args_pos.ksh
tests/zfs-tests/tests/functional/cli_root/zfs_create/: properties.kshlib  zfs_create.cfg  zfs_create_008_neg.ksh  zfs_create_012_pos.ksh  zfs_create_common.kshlib  zfs_create_crypt_combos.ksh  zfs_create_encrypted.ksh  zfs_create_verbose.ksh
tests/zfs-tests/tests/functional/cli_root/zfs_get/: zfs_get_001_pos.ksh  zfs_get_002_pos.ksh  zfs_get_005_neg.ksh  zfs_get_008_pos.ksh  zfs_get_009_pos.ksh  zfs_get_list_d.kshlib
tests/zfs-tests/tests/functional/cli_root/zfs_set/: property_alias_001_pos.ksh  ro_props_001_pos.ksh
tests/zfs-tests/tests/functional/cli_root/zpool_add/: zpool_add_001_pos.ksh  zpool_add_010_pos.ksh
tests/zfs-tests/tests/functional/cli_root/zpool_create/: zpool_create_001_pos.ksh  zpool_create_021_pos.ksh  zpool_create_022_pos.ksh  zpool_create_crypt_combos.ksh  zpool_create_encrypted.ksh  zpool_create_features_003_pos.ksh  zpool_create_features_005_pos.ksh
tests/zfs-tests/tests/functional/cli_root/zpool_destroy/: zpool_destroy_001_pos.ksh
tests/zfs-tests/tests/functional/cli_root/zpool_get/: zpool_get.cfg
tests/zfs-tests/tests/functional/cli_root/zpool_import/: zpool_import_001_pos.ksh  zpool_import_002_pos.ksh
tests/zfs-tests/tests/functional/cli_root/zpool_remove/: zpool_remove_001_neg.ksh
tests/zfs-tests/tests/functional/cli_root/zpool_set/: zpool_set_002_neg.ksh  zpool_set_003_neg.ksh  zpool_set_features.ksh
tests/zfs-tests/tests/functional/cli_user/zfs_list/: zfs_list.kshlib  zfs_list_001_pos.ksh  zfs_list_003_pos.ksh  zfs_list_007_pos.ksh
tests/zfs-tests/tests/functional/io/: libaio.ksh  mmap.ksh  posixaio.ksh  psync.ksh  setup.ksh  sync.ksh
tests/zfs-tests/tests/functional/online_offline/: online_offline_002_neg.ksh
tests/zfs-tests/tests/functional/pool_names/: pool_names_002_neg.ksh
tests/zfs-tests/tests/functional/raidz/: raidz_001_neg.ksh  raidz_002_pos.ksh  raidz_003_pos.ksh  raidz_004_pos.ksh
tests/zfs-tests/tests/functional/refreserv/: refreserv_multi_raidz.ksh
tests/zfs-tests/tests/functional/removal/: removal.kshlib  removal_with_add.ksh  remove_raidz.ksh
tests/zfs-tests/tests/functional/replacement/: rebuild_raidz.ksh
tests/zfs-tests/tests/functional/slog/: slog.cfg  slog_001_pos.ksh  slog_002_pos.ksh  slog_003_pos.ksh  slog_004_pos.ksh  slog_005_pos.ksh  slog_006_pos.ksh  slog_008_neg.ksh  slog_009_neg.ksh  slog_011_neg.ksh
tests/zfs-tests/tests/functional/zvol/zvol_ENOSPC/: cleanup.ksh  setup.ksh  zvol_ENOSPC.cfg
tests/zfs-tests/tests/functional/zvol/zvol_cli/: setup.ksh
tests/zfs-tests/tests/functional/zvol/zvol_misc/: setup.ksh  zvol_misc_002_pos.ksh  zvol_misc_zil.ksh
tests/zfs-tests/tests/functional/zvol/zvol_swap/: zvol_swap_001_pos.ksh  zvol_swap_002_pos.ksh  zvol_swap_004_pos.ksh
